new_tests/semantics/scope/bad/016_ED2.cm

def WEEKS type = { MON = 1, TUES = 3 }
def WEEKS2 type = { WEDS = 5, TUES = 2 }
